--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -107,23 +107,7 @@
         color: white;
         font-weight: 500;margin-left: 10px;
       }
-      & .accessCode{
-         width: 100%;
-         display: flex;
-         align-items: center;
-       & .accessInput{
-         padding: 0.3rem;
-         width: 80%;
-         border: 2px solid $main_col;
-         font-weight: 500;
-         font-size: 1rem;
-         font-family: 'Roboto Slab', serif;;
-       }
-       & .icon{
-         font-size: 1.2rem;
-         padding: 0.5rem;
-       }
-      }
+      
     }
       & .note{
         color: red;
@@ -195,6 +179,21 @@
        }
      }
   }
+  & .accessCode{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 15px;
+  & span{
+    font-size: 0.8rem;
+    font-weight: 600;
+  }
+  & .icon{
+    font-size: 1.2rem;
+    padding: 0.5rem;
+  }
+ }
   & .notice{
     width: 100%;
     padding: 14px;
