--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -257,9 +257,11 @@
           display: flex;
           align-items: flex-start;
           padding: 0.6rem;
-          border:  1px solid red;
           & h2 {
             text-align: flex-start;
+          }
+          & h3{
+            margin-bottom: 10px;
           }
 
         }
