--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -11,18 +11,53 @@
     box-sizing: border-box;
   }
   & .headersection{
-
+     display: flex;
     background-color: $main_col;
     display: flex;
     color: white;
     padding: 1rem;
     user-select: none;
+    align-items: flex-start;
+    justify-content: space-between;
     & img{
-      width: 64px;
-      height: 64px;
+      width: 48px;
+      height: 48px;
+      border-radius: 25px;
+      border: 1px solid white;
+    }
+    & .headprofile{
+      display: flex;
+       
+      align-items: center;
+    & .checkout{
+      display: flex;
+      align-items: center;
+     & p {
+        font-size: 0.8rem;
+         font-weight:400 ;
+
+      }
+      & .icon{
+        margin-right: 5px;
+      }
+    }
+  }
+    & p{
+      font-size: 18px;
+      font-weight: 600;
+      padding: 0;
+      margin: 0;
+    }
+    & a{
+      text-decoration:double;
+      color: rgb(222, 212, 211);
+      font-size: 14px;
+      font-weight: 600;
+      margin-left: 5px;
+      font-family: 'Smooch', cursive;
+      letter-spacing:0.3mm ;
     }
     & h1{
-      width: 100%;
       font-size: 1.6rem;
       display: flex;
        
@@ -68,7 +103,7 @@
     & .maininputSection{
       padding: 1.6rem;
       box-shadow: rgba(60, 64, 67, 0.3) 0px 1px 2px 0px, rgba(60, 64, 67, 0.15) 0px 1px 3px 1px;
-      width: 60% ;
+      width: 70% ;
       margin-top: -3rem;
       background-color: white;
       display: flex;
@@ -83,7 +118,7 @@
         gap: 0.5rem;
       & .input{
         padding:0.7rem;
-        width: 80%;
+        width: 85%;
         font-size: 1.1rem;
         border: 2px solid rgba(79, 78, 78, 0.907);
         border-radius: 4px;
@@ -214,16 +249,16 @@
     padding: 14px;
     background-color: rgb(255, 172, 172);
     display: flex;
-    
+    justify-content: center;
     align-items: center;
     & .icon{
-      font-family: 1.5rem;
+      font-family: 1.6rem;
       margin-right: 5px;
     }
     & p{
       font-weight: 600;
       margin: 0;
-      font-size: 0.8rem;
+      font-size: 0.9rem;
     }
   }
   & .footersection{
@@ -283,7 +318,7 @@
 
       }
       & .maininputSection{
-        width: 85%;
+        width: 87%;
         & .inputContainer{
         & .input{
           width: 100%;
