header spell chnges

--- a/src/app.module.scss
+++ b/src/app.module.scss
@@ -17,7 +17,7 @@
     color: white;
     padding: 1rem;
     user-select: none;
-    align-items: flex-start;
+    align-items: center;
     justify-content: space-between;
     & img{
       width: 48px;
